--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -9,16 +9,19 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    driverClassName: com.mysql.jdbc.Driver
+    dialect : org.hibernate.dialect.MySQLDialect
+    username: root
+    password: 2706
     logSql: true
+
+
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://localhost/test
     test:
         dataSource:
             dbCreate: update
