--- a/build.gradle
+++ b/build.gradle
@@ -52,10 +52,12 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:hibernate4"
     compile "org.hibernate:hibernate-ehcache"
+    compile 'org.grails.plugins:spring-security-core:3.0.3'
     console "org.grails:grails-console"
     profile "org.grails.profiles:web:3.1.1"
     runtime "org.grails.plugins:asset-pipeline"
-    runtime "com.h2database:h2"
+    //runtime "com.h2database:h2"
+    runtime 'mysql:mysql-connector-java:5.1.29'
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
