--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -13,14 +13,14 @@ dataSource:
     dialect : org.hibernate.dialect.PostgreSQLDialect
     username: postgres
     password: 2706
-    logSql: true
+    logSql: false
 
 
 
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
+            dbCreate: ""
             url: jdbc:postgresql://localhost/test
     test:
         dataSource:
@@ -28,7 +28,7 @@ environments:
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
         dataSource:
-            dbCreate: update
+            dbCreate: ""
             url: jdbc:postgresql://localhost/capitalbus
             properties:
                 jmxEnabled: true
